# databricks_asset_bundle_dbt

dab_dbt/: .gitignore  README.md  databricks.yml  dbt_project.yml  profile_template.yml  pyproject.toml
dab_dbt/dbt_profiles/: profiles.yml
dab_dbt/resources/: dab_dbt.job.yml
dab_dbt/src/models/staging/: address.py  people.py  people.sql
