[project]
name = "databricks-asset-bundle-dbt"
version = "0.1.0"
requires-python = "==3.11.13"
dependencies = [
    "certifi>=2025.8.3",
    "databricks-connect>=16.1.6",
    "dbt-core>=1.10.11",
    "dbt-databricks>=1.10.12",
    "faker>=37.8.0",
    "pip-system-certs>=5.2",
    "polars>=1.33.1",
]
